V 
* features
- 
* bug fixes
-

V 2.0.1
* features
- 
* bug fixes
- fix fc on orientation change

V 2.0.0
* features
- Virtual governors
- GUI updates
- Settings and help moved to menu
- Statistics tab
- allow frequencies < 400 for minimal frequency
- use powersave_bias 
* bug fixes
-

V 1.6.1
* features
- Greek translation
- 
* bug fixes
- 

V 1.6.3
* features
- 
* bug fixes
- fix forceclose
- fix read battery current
 
V 1.6.2
* features
- French translation
- allow min equal max frequency
- switch reporting to mailing list cputuner-help@lists.sourceforge.net
* bug fixes
- fix switching language internally

V 1.6.1
* features
- Settings option: Pulse mobiledata on connected wifi (default: true)
- Greek translation
- report android release
* bug fixes
-
 
V 1.6.0
* features
- Avoid some system calls by handling sanity checks internally 
- Choose app language
- force internal installation otherwise boot start will not work
- run script on profile switch (for power users and non beta now)
* bug fixes
- fix force close on orientation change in capabilities check
- make logging less noisy
- Italian Update

V 1.5.2
* features
- ensure correct frequency and threshold values
* bug fixes
- fix crash

V 1.5.1 
* features
- go back to previous service state  (non beta now)
- move capability check to settings/system
- make allow manual service changes default 
* bug fixes
- fix crash on start

V 1.5.0
* features
- run script on profile switch (beta and for power users)
- call in progress profile (non beta now)
- pulsed service switches (non beta now)
- manually choose a profile
- layout changes
- German translation
* bug fixes
- 
Those last changes where done while my thoughts where in Japan.
Hopefully we will never ever see such a nuclear disaster again!

V 1.4.2
* features
- Added option (in settings) to enable userspace governor
* bug fixes
-

V 1.4.1
* features
- 
* bug fixes
- removed userspace governor
- updated Italian translation
- fix capability check

V 1.4.0