@@ -1,0 +1,4 @@
+#Wed Mar 30 16:43:18 CEST 2011
+eclipse.preferences.version=1
+encoding//assets/help-it/profile.html=UTF-8
+encoding//assets/help-it/trigger.html=UTF-8
