@@ -2,10 +2,13 @@
 - display pulse state on main view
 - use sprintf to display time in state
 
-- context sensitive help
+- open battery stat from cpu tuner
+
+- fix capability check to honor thresholds only
 
 - widget for profile switch
 
+- context sensitive help
 
 - backup restore profiles 
 - switch profile/triggers sets (everything) based on time
