@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/itemMenuHelp" android:title="@string/labelHelpTab"
-		android:menuCategory="system" android:icon="@drawable/help"></item>
 	<item android:id="@+id/itemSettings" android:menuCategory="system"
-		android:title="@string/labelSettingsTab" android:icon="@drawable/configure"></item>
+		android:title="@string/labelSettingsTab" android:icon="@android:drawable/ic_menu_preferences"></item>
 </menu>
