@@ -2,6 +2,6 @@
 <resources>
 <string name="labelCurrentFrequency">current</string>
 <string name="prefScreenLegal">Legal stuff</string>
-<string name="prefLegalOxigenIcons">Icons License</string>
+<string name="prefLegalOxigenIcons">Tab icon License</string>
 <string name="prefLegalOxigenIconsLong">License of the used oxigen icons.  Thanks for the nice icons.</string>
 </resources>
