@@ -23,6 +23,7 @@ import android.widget.SimpleCursorAdapter;
 import android.widget.SimpleCursorAdapter.ViewBinder;
 import android.widget.TextView;
 import ch.amana.android.cputuner.R;
+import ch.amana.android.cputuner.helper.GeneralMenuHelper;
 import ch.amana.android.cputuner.helper.Logger;
 import ch.amana.android.cputuner.helper.SettingsStorage;
 import ch.amana.android.cputuner.model.PowerProfiles;
@@ -282,7 +283,10 @@ public class TriggersListActivity extends ListActivity {
 		if (handleCommonMenu(item)) {
 			return true;
 		}
-		return super.onOptionsItemSelected(item);
+		if (GeneralMenuHelper.onOptionsItemSelected(this, item, HelpActivity.PAGE_TRIGGER)) {
+			return true;
+		}
+		return false;
 	}
 
 	private boolean handleCommonMenu(MenuItem item) {
