@@ -4,6 +4,14 @@ V
 * bug fixes
 -
 
+V 
+* features
+- context sensitive help
+- help update 
+- manage back button in help
+* bug fixes
+-
+
 V 2.0.1
 * features
 - 
